--- a/style.css
+++ b/style.css
@@ -122,10 +122,41 @@ html, body {
   font-weight: bolder;
   font-family: sans-serif;
   color: #101f38;
-  flex-direction: column;;
+  flex-direction: column;
 }
 
 .mission-statement {
+  text-align: center;
+  padding-right: 6%;
+  font-size: x-large;
+  font-family: sans-serif;
+  display: flex;
+  flex-direction: column;
+  color: #101f38;
+}
+
+.The {
+  text-align: center;
+  padding-right: 6%;
+  font-size: x-large;
+  font-family: sans-serif;
+  display: flex;
+  flex-direction: column;
+  color: #7dc6b6;
+
+}
+
+.Plan {
+  text-align: center;
+  padding-right: 6%;
+  font-size: x-large;
+  font-family: sans-serif;
+  display: flex;
+  flex-direction: column;
+  color: #e4cbbc;
+}
+
+.Mission {
   text-align: center;
   padding-right: 6%;
   font-size: x-large;
@@ -216,7 +247,7 @@ html, body {
   padding-left: 1%;
 }
 
-.insta {
+.social-media {
   height: 80%;
   align-self: center;
   display: inline-flex;
@@ -225,6 +256,7 @@ html, body {
   text-align: center;
   padding-right: 1%;
   border-right: 1px solid black;
+  padding-right: 6%;
 }
 
 .read-blog {
@@ -233,7 +265,7 @@ html, body {
   flex-direction: column;
   justify-content: center;
   text-align: center;
-  padding-right: 1%;
+  padding-right: 3%;
 }
 
 .footer {
@@ -254,7 +286,7 @@ html, body {
   font-family: sans-serif;
 
 }
-.elementcontainer1 a {
+.elementcontainer1 div {
   color: #101f38;
   text-decoration: none;
   display: flex;
