--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ html, body {
   box-sizing: border-box;
   width: 100%;
   height: 80px;
-  background-color: white;
+  background-color: #e4cbbc;
   display: flex;
   border: none;
   position: fixed;
