--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ html, body {
 
 
 .header {
+  background-color: transparent;
   box-sizing: border-box;
   width: 100%;
   height: 100px;
@@ -29,15 +30,18 @@ html, body {
   width: 100%;
   height: 80px;
   background-color: #e4cbbc;
+  opacity: .9;
   display: flex;
-  border: none;
+  border-bottom: 3px solid black;
   position: fixed;
   top: 0;
   left: 0;
+  transition-duration: 1s;
+  transition-timing-function: ease-in-out;
 }
 
 .wrapper {
-  height: 4000px;
+  height: 100%;
 }
 
 
@@ -55,9 +59,11 @@ html, body {
   color: #101f38;
   text-decoration: none;
   display: flex;
-  z-index: 1;
+  justify-content: space-around;
   align-self: center;
-  font-size: 20px;
+  font-size: 25px;
+  transition-duration: 2s;
+  transition-timing-function: ease-in-out;
 }
 
 
@@ -71,30 +77,43 @@ html, body {
   color: #101f38;
   text-decoration: none;
   display: flex;
-  z-index: 1;
-  align-self: center;
+  justify-content: space-between;
+  font-size: 25px;
+  transition-duration: 2s;
+  transition-timing-function: ease-in-out;
 }
 
 .logocontainer{
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  position: fixed;
-  top: 35px;
-  box-sizing: border-box;
+    width: 72%;
+    height: 100%;
+    display: flex;
+    justify-content: flex-end;
+    position: fixed;
+    top: 10px;
+    box-sizing: border-box;
+    transition-duration: 1s;
+    transition-timing-function: ease-in-out;
 }
 .logo {
   display: flex;
   flex-direction: column;
-  align-self: center;
-  justify-content: center;
+  justify-content: flex-end;
   width: 50%;
+  position: fixed;
 }
+
+
+.logoshow {
+  position: absolute;
+  width: 100%;
+  top: 10px;
+}
+
 
 .logo img {
    display: flex;
    flex-direction: column;
-}
+ }
 
 .logo span {
   box-sizing: border-box;
