--- a/style.css
+++ b/style.css
@@ -4,110 +4,139 @@ html, body {
   box-sizing: border-box;
   background-color: #e7e7dc;
 }
+
 .backpic {
+  height: 500px;
   width: 100%;
-  height: 600px;
-  box-sizing: border-box;
-  position: absolute;
-  top: 0;
+  background-image: url('/Users/CQ/documents/systemic-Formulas/IMG_6885.JPG');
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
-
 .header {
-  background-color: transparent;
   box-sizing: border-box;
   width: 100%;
   height: 100px;
   display: flex;
-  border: none;
-  position: absolute;
-  top: 0;
-  left: 0;
-}
-
-.showing {
-  box-sizing: border-box;
-  width: 100%;
-  height: 80px;
-  background-color: #e4cbbc;
-  opacity: .9;
-  display: flex;
-  border-bottom: 3px solid black;
   position: fixed;
   top: 0;
-  left: 0;
-  transition-duration: 1s;
+  transition-duration: 2s;
   transition-timing-function: ease-in-out;
 }
 
-.wrapper {
-  height: 100%;
+
+.showing {
+  background-image: url('/Users/CQ/documents/systemic-Formulas/the plan logo.png');
+  background-repeat: no-repeat;
+  background-position: right;
+  background-size: 180px 95px;
 }
 
+.showing{
+  box-sizing: border-box;
+ width: 100%;
+ height: 60px;
+ background-color: #e7e7dc;
+ opacity: .8;
+ display: flex;
+ border-bottom-style: outset;
+ position: fixed;
+ top: 0;
+ left: 0;
+ transition-duration: 2s;
+ transition-timing-function: ease-in-out;
+}
 
 .elementcontainer {
   display: flex;
   justify-content: space-around;
   align-self: center;
+  font-family: Amatic SC;
+  font-weight: bold;
   width: 100%;
-  font-size: x-large;
-  font-family: sans-serif;
-}
-
-
-.showing .elementcontainer {
-  color: #101f38;
-  text-decoration: none;
-  display: flex;
-  justify-content: space-around;
-  align-self: center;
-  font-size: 25px;
   transition-duration: 2s;
   transition-timing-function: ease-in-out;
 }
-
-
-.elementcontainer img {
-  display: flex;
-  align-self: center;
-}
-
 
 .elementcontainer a {
   color: #101f38;
   text-decoration: none;
-  display: flex;
-  justify-content: space-between;
-  font-size: 25px;
+  font-size: 35px;
   transition-duration: 2s;
   transition-timing-function: ease-in-out;
 }
 
+.header .elementcontainer a:hover {
+  font-size: 30px;
+  border-bottom: 6px solid #101f38;
+  padding-bottom: 2.5px;
+  border-bottom-width: medium;
+  border-radius: 5px;
+  background-color: #e4c8b5;
+  transition-duration: 0.3s;
+  transition-timing-function: ease-in-out;
+}
+
+
+.showing .elementcontainer {
+  width: 60%;
+  transition-duration: 2s;
+  transition-timing-function: ease-in-out;
+}
+
+.showing .elementcontainer a {
+  font-size: 25px;
+  font-family: Amatic SC;
+  transition-duration: 2s;
+  transition-timing-function: ease-in-out;
+}
+
+.showing .elementcontainer a:hover {
+  font-size: 30px;
+  border-bottom: 6px solid #101f38;
+  padding-bottom: 2.5px;
+  border-bottom-width: medium;
+  border-radius: 5px;
+  background-color: #e4c8b5;
+  transition-duration: 0.3s;
+  transition-timing-function: ease-in-out;
+}
+
+
+
 .logocontainer{
-    width: 72%;
+    width: 100%;
     height: 100%;
     display: flex;
-    justify-content: flex-end;
+    justify-content: center;
     position: fixed;
     top: 10px;
     box-sizing: border-box;
-    transition-duration: 1s;
+    transition-duration: 2s;
     transition-timing-function: ease-in-out;
 }
+
+.logoshow {
+  width: 0%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  position: fixed;
+  top: 10px;
+  box-sizing: border-box;
+  transition-duration: 2s;
+  transition-timing-function: ease-in-out;
+}
+
+
 .logo {
   display: flex;
   flex-direction: column;
-  justify-content: flex-end;
+  justify-content: flex-start;
   width: 50%;
   position: fixed;
 }
 
-
-.logoshow {
-  position: absolute;
-  width: 100%;
-  top: 10px;
-}
 
 
 .logo img {
@@ -122,6 +151,7 @@ html, body {
   flex-direction: column;
   text-align: center;
 }
+
 #events {
   font-size: 50px;
   margin-top: -73px;
@@ -139,7 +169,7 @@ html, body {
   height: 42px;
   display: flex;
   justify-content: center;
-  background-color: white;
+
 }
 
 .box-move {
@@ -166,109 +196,113 @@ html, body {
 }
 
 .right-contain {
-      width: 60%;
-      text-align: justify;
-      letter-spacing: 0.05em;
-      display: inline-flex;
+      display: flex;
+      justify-content: space-between;
+      letter-spacing: 0.06em;
       box-sizing: border-box;
-      padding-bottom: 30px;
 }
 
-.right-contain h2 {
-  font-size: xx-large;
-  font-weight: bolder;
-  font-family: sans-serif;
+
+.mission-statement  {
+  height: 100%;
+  width: 100%;
+  display: inline-flex;
+  flex-direction: column;
+}
+
+.mission-statement p {
+  font-size: 1.7em;
+  width: 100%;
+  text-indent: 8%;
+  font-family: Shadows Into Light Two;
   color: #101f38;
-  flex-direction: column;
-}
-
-.mission-statement {
-  text-align: center;
-  padding-right: 6%;
-  font-size: x-large;
-  font-family: sans-serif;
+  padding: 1%;
   display: flex;
-  flex-direction: column;
-  color: #101f38;
+  align-self: center;
 }
 
-.The {
-  text-align: center;
-  padding-right: 6%;
-  font-size: x-large;
-  font-family: sans-serif;
-  display: flex;
-  flex-direction: column;
-  color: #7dc6b6;
-
-}
-
-.Plan {
-  text-align: center;
-  padding-right: 6%;
-  font-size: x-large;
-  font-family: sans-serif;
-  display: flex;
-  flex-direction: column;
-  color: #e4cbbc;
-}
 
 .Mission {
-  text-align: center;
-  padding-right: 6%;
-  font-size: x-large;
+  align-self: center;
+  flex-direction: column;
+  font-size: 2.4em;
   font-family: sans-serif;
   display: flex;
-  flex-direction: column;
-  color: #101f38;
+  color: #7dc6b6;
 }
 
-.img-one {
-  display: inline-flex;
+.img-1 {
+  display: flex;
   flex-direction: column;
-    padding-top: 35px;
-    z-index: -1;
+  border-style: outset;
+  justify-content: flex-end;
+  height: 100%;
+  margin-top: 2%;
+  margin-bottom: 2%;
 }
 
-.w6-btn a{
-  display: inline-flex;
-  display: block;
-  flex-direction: column;
+.img-1 a {
   text-decoration: none;
+}
+
+.img-1 button {
   background-color: #101f38;
+  border-style: outset;
   border: 3px solid #e4c8b5;
-  height: 40px;
-  margin-top: -45px;
   color: #e7e7dc;
   font-size: xx-large;
-  text-align: center;
   font-family: cursive;
-  line-height: 1.2em;
+  width: 100%;
+  line-height: 1.4em;
 }
+
+.img-1 button:hover {
+  background-color: #101f38;
+  border-style: outset;
+  border: 5px solid #e4c8b5;
+  color: #e7e7dc;
+  font-size: 35px;
+  font-family: cursive;
+  width: 100%;
+  line-height: 1.5em;
+}
+
 
 .img-two {
-  display: inline-flex;
+  display: flex;
   flex-direction: column;
-  z-index: -1;
-  position: absolute;
-  padding-top: 35px;
-  right: 60px;
+  border-style: outset;
+  justify-content: flex-end;
+  height: 100%;
+  margin-top: 2%;
+  margin-bottom: 2%;
 }
 
-.img-two a{
-  display: inline-flex;
-  flex-direction: column;
+.img-two a {
   text-decoration: none;
+}
+
+
+.img-two button {
   background-color: #101f38;
+  border-style: outset;
   border: 3px solid #e4c8b5;
-  height: 40px;
   color: #e7e7dc;
   font-size: xx-large;
-  text-align: center;
   font-family: cursive;
-  z-index: 1;
-  margin-top: -15%;
-  line-height: 1.2em;
+  width: 100%;
+  line-height: 1.4em;
+}
+
+.img-two button:hover {
+  background-color: #101f38;
+  border-style: outset;
+  border: 5px solid #e4c8b5;
+  color: #e7e7dc;
+  font-size: 35px;
+  font-family: cursive;
+  width: 100%;
+  line-height: 1.5em;
 }
 
 .body-last {
@@ -278,7 +312,7 @@ html, body {
   flex-direction: row;
   justify-content: space-between;
   font-size: 25px;
-  background-color: white;
+    background-color: white;
 }
 
 .body-last a {
@@ -330,22 +364,20 @@ html, body {
   width: 100%;
   height: 100px;
   display: flex;
-  border: none;
-  bottom: 0;
+  background-color:
 }
 
 .elementcontainer1 {
   display: flex;
-  justify-content: space-around;
   align-self: center;
+  justify-content: space-around;
   width: 100%;
   font-size: large;
   font-family: sans-serif;
-  padding-left: 40%;
+
 }
-.elementcontainer1 div {
+.elementcontainer1 a {
   color: #101f38;
   text-decoration: none;
   display: flex;
-  z-index: 1;
 }
