--- a/style.css
+++ b/style.css
@@ -5,12 +5,18 @@ html, body {
   background-color: #e7e7dc;
 }
 
-.backpic {
-  height: 500px;
+
+#rotating-item-wrapper {
+  height: 600px;
   width: 100%;
-  background-image: url('/Users/CQ/documents/systemic-Formulas/IMG_6885.JPG');
-  background-repeat: no-repeat;
-  background-size: cover;
+  position: relative;
+  background-size: contain;
+}
+.rotating-item {
+  display: none;
+  position: absolute;
+  top: 0;
+  left: 0;
 }
 
 .header {
@@ -66,16 +72,7 @@ html, body {
   transition-timing-function: ease-in-out;
 }
 
-.header .elementcontainer a:hover {
-  font-size: 30px;
-  border-bottom: 6px solid #101f38;
-  padding-bottom: 2.5px;
-  border-bottom-width: medium;
-  border-radius: 5px;
-  background-color: #e4c8b5;
-  transition-duration: 0.3s;
-  transition-timing-function: ease-in-out;
-}
+
 
 
 .showing .elementcontainer {
@@ -169,7 +166,7 @@ html, body {
   height: 42px;
   display: flex;
   justify-content: center;
-
+background-color: white;
 }
 
 .box-move {
