--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ html, body {
  background-color: #e7e7dc;
  opacity: .8;
  display: flex;
- border-bottom-style: outset;
+ box-shadow: 2px 2px #e7e7dc;
  position: fixed;
  top: 0;
  left: 0;
@@ -65,14 +65,14 @@ html, body {
 }
 
 .elementcontainer a {
-  color: #101f38;
+  color: #e7e7dc;
   text-decoration: none;
   font-size: 35px;
+  border-radius: 5px;
+  background-color: #101f38;
   transition-duration: 2s;
   transition-timing-function: ease-in-out;
 }
-
-
 
 
 .showing .elementcontainer {
@@ -81,15 +81,20 @@ html, body {
   transition-timing-function: ease-in-out;
 }
 
+
 .showing .elementcontainer a {
   font-size: 25px;
+  color: #101f38;
+  background-color: transparent;
   font-family: Amatic SC;
   transition-duration: 2s;
   transition-timing-function: ease-in-out;
 }
 
+
 .showing .elementcontainer a:hover {
   font-size: 30px;
+  color: #101f38;
   border-bottom: 6px solid #101f38;
   padding-bottom: 2.5px;
   border-bottom-width: medium;
@@ -100,14 +105,13 @@ html, body {
 }
 
 
-
 .logocontainer{
     width: 100%;
     height: 100%;
     display: flex;
     justify-content: center;
     position: fixed;
-    top: 10px;
+    top: 5%;
     box-sizing: border-box;
     transition-duration: 2s;
     transition-timing-function: ease-in-out;
@@ -119,7 +123,7 @@ html, body {
   display: flex;
   justify-content: center;
   position: fixed;
-  top: 10px;
+  top: 15px;
   box-sizing: border-box;
   transition-duration: 2s;
   transition-timing-function: ease-in-out;
@@ -135,7 +139,6 @@ html, body {
 }
 
 
-
 .logo img {
    display: flex;
    flex-direction: column;
@@ -147,26 +150,28 @@ html, body {
   display: flex;
   flex-direction: column;
   text-align: center;
+  justify-content: space-around;
+  text-shadow: 3px 3px #e7e7dc;
 }
 
 #events {
-  font-size: 50px;
-  margin-top: -73px;
-  margin-bottom: 20px;
+  margin-top: -18%;
+  font-size: 4em;
   font-family: cursive;
 }
 
 #pde {
-  font-size: large;
+
+  font-size: 1.4em;
   font-family: serif;
 }
 
-.box-to-box-container {
+#box-to-box-container {
   width: 100%;
   height: 42px;
   display: flex;
   justify-content: center;
-background-color: white;
+  background-color: white;
 }
 
 .box-move {
