--- a/style.css
+++ b/style.css
@@ -69,6 +69,7 @@ html, body {
   text-decoration: none;
   font-size: 35px;
   border-radius: 5px;
+  box-shadow: 3px 3px #e7e7dc;
   background-color: #101f38;
   transition-duration: 2s;
   transition-timing-function: ease-in-out;
@@ -151,7 +152,7 @@ html, body {
   flex-direction: column;
   text-align: center;
   justify-content: space-around;
-  text-shadow: 3px 3px #e7e7dc;
+  text-shadow: 2px 2px #e7e7dc;
 }
 
 #events {
@@ -233,6 +234,63 @@ html, body {
   color: #7dc6b6;
 }
 
+
+.cardcontainer {
+  width: 100%;
+  height: 100%;
+  background-color: white;
+  border-style: inset;
+  display: flex;
+  flex-direction: column;
+  margin-top: 1%;
+}
+
+
+.tiffsCard {
+  width: 100%;
+  height: 100%;
+  display: flex;
+}
+
+.divbox1 {
+  height: 30px;
+  display: flex;
+  flex: 1;
+  border-right: 15px solid white;
+  background-color: #e4c8b5;
+}
+
+ .divbox2 {
+  height: 30px;
+  display: flex;
+  flex-grow: 2;
+  border-right: 20px solid white;
+  background-color: #7dc6b6;
+}
+
+ .divbox3 {
+  height: 30px;
+  display: flex;
+  flex: 1;
+  background-color: #101f38;
+}
+
+.cardcontent {
+  font-size: 2em;
+  display: flex;
+  flex-direction: column;
+  text-align: right;
+  padding-bottom: 3%;
+ }
+
+
+.cardinfo {
+  font-size: 1em;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+}
+
 .img-1 {
   display: flex;
   flex-direction: column;
@@ -245,6 +303,7 @@ html, body {
 
 .img-1 a {
   text-decoration: none;
+  border: none;
 }
 
 .img-1 button {
