--- a/style.css
+++ b/style.css
@@ -184,6 +184,7 @@ html, body {
   background-color: #101f38;
   align-self: center;
   margin-left: 10px;
+  transition-duration: 2s;
 }
 
 .body-container-first {
@@ -203,6 +204,7 @@ html, body {
       justify-content: space-between;
       letter-spacing: 0.06em;
       box-sizing: border-box;
+      width: 100%;
 }
 
 
@@ -236,13 +238,13 @@ html, body {
 
 
 .cardcontainer {
-  width: 100%;
-  height: 100%;
   background-color: white;
-  border-style: inset;
+  border-style: outset;
   display: flex;
   flex-direction: column;
+  justify-content: space-around;
   margin-top: 1%;
+  position: absolute;
 }
 
 
@@ -276,12 +278,25 @@ html, body {
 }
 
 .cardcontent {
-  font-size: 2em;
+  font-size: 1.5em;
   display: flex;
   flex-direction: column;
+  color: #101f38;
   text-align: right;
-  padding-bottom: 3%;
+  padding-right: 5%;
  }
+
+ .cardcontent span {
+   font-size: 0.7em;
+   display: flex;
+   flex-direction: column;
+   color: #7dc6b6;
+   padding-bottom: 3%;
+   padding-right: 5%;
+   text-align: right;
+  }
+
+
 
 
 .cardinfo {
@@ -295,23 +310,28 @@ html, body {
   display: flex;
   flex-direction: column;
   border-style: outset;
-  justify-content: flex-end;
+  border-width: thick;
+  justify-content: space-around;;
   height: 100%;
+  width: inherit;
   margin-top: 2%;
   margin-bottom: 2%;
+  margin-right: 1%;
+  clear: right;
 }
 
 .img-1 a {
   text-decoration: none;
   border: none;
+  display: inline-block;
 }
 
 .img-1 button {
   background-color: #101f38;
   border-style: outset;
-  border: 3px solid #e4c8b5;
+  border: 5px solid #e4c8b5;
   color: #e7e7dc;
-  font-size: xx-large;
+  font-size: 2em;
   font-family: cursive;
   width: 100%;
   line-height: 1.4em;
@@ -322,7 +342,7 @@ html, body {
   border-style: outset;
   border: 5px solid #e4c8b5;
   color: #e7e7dc;
-  font-size: 35px;
+  font-size: 2.3em;
   font-family: cursive;
   width: 100%;
   line-height: 1.5em;
@@ -330,26 +350,31 @@ html, body {
 
 
 .img-two {
-  display: flex;
+  display: inline-flex;
   flex-direction: column;
   border-style: outset;
-  justify-content: flex-end;
+  border-width: thick;
+  justify-content: space-around;
   height: 100%;
+  width: inherit;
   margin-top: 2%;
   margin-bottom: 2%;
+  clear: left;
 }
 
 .img-two a {
   text-decoration: none;
+  border: none;
+  display: inline-flex;
 }
 
 
 .img-two button {
   background-color: #101f38;
   border-style: outset;
-  border: 3px solid #e4c8b5;
+  border: 5px solid #e4c8b5;
   color: #e7e7dc;
-  font-size: xx-large;
+  font-size: 2em;
   font-family: cursive;
   width: 100%;
   line-height: 1.4em;
@@ -360,7 +385,7 @@ html, body {
   border-style: outset;
   border: 5px solid #e4c8b5;
   color: #e7e7dc;
-  font-size: 35px;
+  font-size: 2.3em;
   font-family: cursive;
   width: 100%;
   line-height: 1.5em;
