--- a/style.css
+++ b/style.css
@@ -296,15 +296,13 @@ html, body {
   display: flex;
   flex-direction: column;
   color: #101f38;
-  text-align: inherit;
   text-align: center;
  }
 
  .cardcontent span {
    font-size: 0.9em;
    display: flex;
-   align-self: center;
-   flex-direction: column;
+   justify-content: center;
    color: #7dc6b6;
    padding-bottom: 3%;
   }
@@ -313,7 +311,8 @@ html, body {
   font-size: 1em;
   display: flex;
   flex-direction: column;
-  align-self: center;
+  display: inline;
+  text-align: center;
 }
 
 .img-1 {
@@ -325,7 +324,7 @@ html, body {
   width: inherit;
   margin-top: 2%;
   margin-bottom: 2%;
-  margin-right: 0.6%;
+  margin-right: 1%;
   background-color: white;
 }
 
@@ -385,11 +384,11 @@ html, body {
   border-style: outset;
   border: 5px solid #e4c8b5;
   color: #e7e7dc;
-  font-size: 2.5em;
+  font-size: 3em;
   font-family: Amatic SC;
   text-shadow: 1.5px 2.5px 3px #7dc6b6;
   width: 100%;
-  line-height: 1.4em;
+  line-height: 1em;
   cursor: pointer;
 }
 
@@ -398,15 +397,15 @@ html, body {
   border-style: outset;
   border: 5px solid #e4c8b5;
   color: #e7e7dc;
-  font-size: 2.8em;
+  font-size: 3.2em;
   font-family: Amatic SC;
   width: 100%;
-  line-height: 1.5em;
+  line-height: 1em;
 }
 
 
 button:active {
-    transform:translateX(3px);
+    transform:translateY(2px);
 }
 
 
