--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ html, body {
   height: 100%;
   width: 100%;
   box-sizing: border-box;
-  background-color: #e7e7dc;
+/*  background-color: #e7e7dc;*/
 }
 
 
@@ -22,14 +22,31 @@ html, body {
 .header {
   box-sizing: border-box;
   width: 100%;
-  height: 100px;
+  height: 55px;
   display: flex;
   position: fixed;
   top: 0;
+  background-color: white;
+  opacity: 0.8;
   transition-duration: 2s;
   transition-timing-function: ease-in-out;
 }
 
+.header img {
+  display: flex;
+  opacity: 0.7;
+  align-self: center;
+  transition-duration: 2s;
+  transition-timing-function: ease-in-out;
+}
+
+.showing img {
+  display: flex;
+  opacity: 0.0;
+  align-self: center;
+  transition-duration: 2s;
+  transition-timing-function: ease-in-out;
+}
 
 .showing {
   background-image: url('/Users/CQ/documents/systemic-Formulas/the plan logo.png');
@@ -59,18 +76,16 @@ html, body {
   align-self: center;
   font-family: Amatic SC;
   font-weight: bold;
-  width: 100%;
+  width: 80%;
   transition-duration: 2s;
   transition-timing-function: ease-in-out;
 }
 
-.elementcontainer a {
-  color: #e7e7dc;
+.header .elementcontainer a {
+  color: #101f38;
   text-decoration: none;
   font-size: 35px;
   border-radius: 5px;
-  box-shadow: 3px 3px #e7e7dc;
-  background-color: #101f38;
   transition-duration: 2s;
   transition-timing-function: ease-in-out;
 }
@@ -85,6 +100,7 @@ html, body {
 
 .showing .elementcontainer a {
   font-size: 25px;
+  text-decoration: none;
   color: #101f38;
   background-color: transparent;
   font-family: Amatic SC;
@@ -135,7 +151,7 @@ html, body {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  width: 50%;
+  width: 69%;
   position: fixed;
 }
 
@@ -151,22 +167,13 @@ html, body {
   color: #101f38;
   display: flex;
   flex-direction: column;
-  text-align: center;
-  justify-content: space-around;
   text-shadow: 2px 2px #e7e7dc;
-}
-
-
-#events {
-  margin-top: -18%;
-  font-size: 4em;
-  font-family: cursive;
 }
 
 
 #pde {
 
-  font-size: 1.4em;
+  font-size: 2.5em;
   font-family: serif;
 }
 
@@ -370,9 +377,10 @@ html, body {
   margin-bottom: 2%;
   margin-right: 0.6%;
   background-color: #dadae1;
+  border-color:  #101f38;
 }
 
-.img-two a {
+/*.img-two a {
   text-decoration: none;
   border: none;
   display: inline-flex;
@@ -407,7 +415,7 @@ html, body {
 button:active {
     transform:translateY(2px);
 }
-
+*/
 
 .body-last {
   width: 100%;
