--- a/style.css
+++ b/style.css
@@ -33,27 +33,20 @@ html, body {
   transition-timing-function: ease-in-out;
 }
 
-.header img {
-  display: flex;
-  opacity: 0.7;
-  align-self: center;
-  transition-duration: 2s;
-  transition-timing-function: ease-in-out;
+.socialIcons {
+    position: fixed;
+    display: flex;
+    right: 3px;
+    top: 68px;
+    flex: 1;
+    align-items: center;
 }
 
-.showing img {
-  display: flex;
-  opacity: 0.0;
-  align-self: center;
-  transition-duration: 2s;
-  transition-timing-function: ease-in-out;
-}
-
-.showing {
+.showing{
   background-image: url('/Users/CQ/documents/systemic-Formulas/the plan logo.png');
-  background-repeat: no-repeat;
   background-position: right;
-  background-size: 100px 80px;
+  background-repeat: no-repeat;
+  background-size: 120px 80px;
 }
 
 .showing{
@@ -61,7 +54,7 @@ html, body {
  width: 100%;
  height: 55px;
  background-color: #e7e7dc;
- opacity: .8;
+ opacity: 0.9;
  display: flex;
  box-shadow: 2px 2px #e7e7dc;
  position: fixed;
@@ -77,7 +70,7 @@ html, body {
   align-self: center;
   font-family: Amatic SC;
   font-weight: bold;
-  width: 80%;
+  width: 75%;
   transition-duration: 2s;
   transition-timing-function: ease-in-out;
 }
